test/org/midica/testfiles/failing/nestable-block-open-at-eof.midica
INCLUDE inc/instruments.midica

(
	0 c /4
	0 d /4
